[tool.poetry]
name = "gateway"
version = "0.1.0"
description = ""
authors = ["snowbg <snowbg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pika = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
